--- a/style.css
+++ b/style.css
@@ -350,12 +350,14 @@ font-weight: bolder;
 
 .section9 .Calculator .Calculator-1 table{
     width: 400px;
-    text-align:left;
+    text-align: center;
+   
 }
 
 .section9 .Calculator .Calculator-1 table th, td{
-    border: 1px solid white;
-    
+    border:1px solid white;
+    padding: 10px;
+    border-collapse: collapse;
 }
 
 
