--- a/style.css
+++ b/style.css
@@ -621,9 +621,9 @@ font-weight: bolder;
 
 /*Section 12 End*/
 
-/*Section 12 Start*/
 
 
+/*Section 13 Start*/
 .section13{
     padding-left: 200px;
     padding-right: 150px;
@@ -638,3 +638,5 @@ font-weight: bolder;
     text-align: center;
     color: rgb(117, 115, 115);
 }
+
+/*Section 13 End*/
